<resources>
    <string name="app_name">Info Malang Batu</string>

    <!-- MENU APPLICATION -->
    <string name="menu_list">Lokasi</string>
    <string name="menu_gallery">Galeri</string>
    <string name="menu_maps">Peta</string>
    <string name="menu_other">Lainnya</string>

    <string name="drawer_opened">Pilih Menu </string>

    <string name="home">Awal\u0020</string>
    <string name="list_place">Daftar Tempat</string>
    <string name="gallery">Galeri</string>
    <string name="maps">Peta</string>
    <string name="about">Tentang</string>

    <string name="home_text">
        <![CDATA[
            Selamat Datang,<br/><br/>
            Aplikasi ini berisi informasi seputar tempat menarik di Malang dan Batu. yang memuat tentang objek-objek
            wisata, pusat hiburan dan tempat-tempat sejenis lainnya. semuanya dirangkum dalam satu aplikasi.<br/><br/>
            terimakasih telah menggunakan aplikasi ini.
        ]]>
    </string>
    <string name="kota_malang">Kota Malang</string>
    <string name="kota_batu">Kota Batu</string>
    <string name="kab_malang">Kab. Malang</string>

    <string name="mulai">MULAI</string>
    <string name="semua">Semua</string>

    <string name="place_feed">https://gist.githubusercontent.com/yoesuv/252f56310942bd8d3657/raw/f0cf9082bea810c713ac855b9673b48b965e6710/</string>
    <string name="place_feed_kota_malang">https://gist.githubusercontent.com/yoesuv/364274aa0484dbc5ac4d/raw/4e599c24941e208caf50f8cc9f20725d57dac325/</string>
    <string name="place_feed_kota_batu">https://gist.githubusercontent.com/yoesuv/9dc2940b133a7cf1886f/raw/4b48901aed77a6e89bb5d52cba72fe72e043a6e9/</string>
    <string name="place_feed_kab_malang">https://gist.githubusercontent.com/yoesuv/8d126d4fe37e21cf4c43/raw/5a4e0b7b839c07885ddabeb1e482f0756e41baa7/</string>

    <string name="gallery_feed">https://gist.githubusercontent.com/yoesuv/17039ff1fe37eae36359/raw/fd3ab2e58ce56aa56553853cf49c62f0ad9d4f47/</string>
    <string name="pins_feed">https://gist.githubusercontent.com/yoesuv/e97a8b79328df283a60f/raw/d299fe0eef0285bd1dde5968484f7d133f6cceef/</string>


    <!-- ABOUT -->
    <string name="informasi">Informasi</string>
    <string name="changelog">versi rilis</string>
    <string name="thanks_to">Terima kasih</string>
    <string name="library">Pustaka</string>
    <string-array name="tab_text">
        <item>@string/informasi</item>
        <item>@string/changelog</item>
        <item>@string/thanks_to</item>
        <item>@string/library</item>
    </string-array>

    <!-- INFORMASI -->
    <string name="versi">Versi 1.0.4</string>
    <string name="my_name">Yusuf Saifudin</string>
    <string name="info">Informasi</string>
    <string name="contact">Kontak</string>
    <string name="my_twitter">\@yoesuv</string>
    <string name="my_email">yusuf.saifudin@gmail.com</string>
    <string name="support">Dukungan</string>
    <string name="rate">Beri nilai aplikasi ini jika suka, terima kasih.</string>
    <string name="discl">Kebijakan</string>
    <string name="disclaimer">aplikasi ini tidak menjamin semua bentuk data 100% akurat. oleh karena itu, segala bentuk kritik dan saran akan sangat diapresiasi.</string>

    <!-- TERIMA KASIH -->
    <string name="trims">
        <![CDATA[
        terima kasih kepada <i>blog-blog</i> maupun perorangan yang fotonya dimuat dalam aplikasi ini, dan tidak bisa
    disebutkan satu persatu (<i>kalian luar biasa</i>....).
        ]]>
    </string>
    <string name="person_1">Ahmad Sofi</string>
    <string name="person_as">(Tester)</string>

    <!-- CHANGELOG -->
    <string name="ver_6">Versi 1.0.5</string>
    <string name="ver_6_info">
        <![CDATA[
            + 1 tempat baru di kota Batu<br/>
            + 3 tempat baru di kab. Malang<br/>
            + 3 galeri gambar<br/>
            + 4 tanda lokasi peta
        ]]>
    </string>
    <string name="ver_5">Versi 1.0.4</string>
    <string name="ver_5_info">
        <![CDATA[
            + 1 tempat baru di kota Batu<br/>
            + 1 tanda lokasi peta
        ]]>
    </string>
    <string name="ver_4">Versi 1.0.3</string>
    <string name="ver_4_info">
        <![CDATA[
            • perbaruan kecil design<br/>
            + 2 tempat baru di kota Malang<br/>
            + 2 tanda lokasi peta
        ]]>
    </string>
    <string name="ver_3">Versi 1.0.2</string>
    <string name="ver_3_info">
        <![CDATA[
            • perbaruan kecil design<br/>
            + 2 tempat baru di kab. Malang<br/>
            + 3 galeri gambar<br/>
            + 2 tanda lokasi peta
        ]]>
    </string>
    <string name="ver_2">Versi 1.0.1</string>
    <string name="ver_2_info">
        <![CDATA[
            • menu navigasi baru<br/>
            + 11 tempat baru di kab. Malang<br/>
            + 3 galeri gambar<br/>
            + 10 tanda lokasi peta
        ]]>
    </string>
    <string name="ver_1">Versi 1.0.0</string>
    <string name="ver_1_info">
        <![CDATA[
            • rilis perdana<br/>
            • 38 daftar tempat<br/>
            • 30 galeri gambar<br/>
            • 36 tanda lokasi peta
        ]]>
    </string>

    <!-- LIBRARY -->
    <string name="otto">Retrofit, Picasso</string>
    <string name="otto_copyright">Copyright 2013 Square, Inc.</string>
    <string name="retrofit">Retrofit</string>
    <string name="picasso">Picasso</string>
    <string name="drawerlib">Material Drawer</string>
    <string name="drawerlib_cp">Copyright 2016 Mike Penz</string>
    <string name="icons8">Icons8</string>
    <string name="app_icons8">App icons by </string>
    <string name="apache_license">Licensed under the Apache License, Version 2.0</string>
    <string name="cc_license">Licensed under Creative Commons Attribution-NoDerivs 3.0 Unported</string>

    <!-- MENU MAP -->
    <string name="my_loc">Lokasi Saya</string>
    <string name="map_normal">Normal</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_hybrid">Hybrid</string>

    <!-- SNACKBAR ALERT -->
    <string name="no_inet">Tidak Ada Koneksi Internet</string>
    <string name="connection_fail">Koneksi Terputus</string>
    <string name="try_again">Coba Lagi</string>

    <!-- ALERT DIALOG -->
    <string name="ok">OK</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="permission_rationale_location">Akses Layanan Lokasi dibutuhkan</string>
    <string name="permission_required_toast">Ijin Akses Lokasi dibutuhkan untuk Aplikasi ini</string>
    <string name="location_permission_denied">Aplikasi ini membutuhkan ijin Akses Lokasi. Ubah lewat Pengaturan Sistem.</string>
</resources>
