<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/home_text"
            android:id="@+id/textView_home_text" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="2dp">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            app:columnCount="3"
            app:rowCount="2">

            <ImageView
                android:layout_width="0dp"
                android:adjustViewBounds="true"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_kota_malang"
                app:layout_columnWeight="1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/imageView2"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_kota_batu"
                android:adjustViewBounds="true"
                app:layout_columnWeight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:id="@+id/imageView3"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_kabupaten_malang"
                android:adjustViewBounds="true"
                app:layout_columnWeight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/kota_malang"
                android:id="@+id/textView2"
                app:layout_columnWeight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/kota_batu"
                android:id="@+id/textView3"
                app:layout_columnWeight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/kab_malang"
                android:id="@+id/textView_kab_malang"
                app:layout_columnWeight="1"
                android:gravity="center" />

        </android.support.v7.widget.GridLayout>

    </android.support.v7.widget.CardView>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mulai"
                android:id="@+id/buttonMulai"
                android:textColor="@drawable/button_text_selector"
                android:theme="@style/custom_button"
                android:textSize="15sp"
                android:height="55dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>